learning_components/build/log/idf_py_stdout_output_1902780
[1/12] Building C object esp-idf/blink/CMakeFiles/__idf_blink.dir/blink.c.obj
FAILED: esp-idf/blink/CMakeFiles/__idf_blink.dir/blink.c.obj 
/home/cold/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc  -I/home/cold/esp/learning_components/build/config -I/home/cold/esp/learning_components/components/blink -I/home/cold/esp/learning_components/components/blink/include -I/home/cold/esp/esp-idf/components/newlib/platform_include -I/home/cold/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/cold/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/cold/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/cold/esp/esp-idf/components/freertos/esp_additions/include -I/home/cold/esp/esp-idf/components/esp_hw_support/include -I/home/cold/esp/esp-idf/components/esp_hw_support/include/soc -I/home/cold/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/cold/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/cold/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/cold/esp/esp-idf/components/heap/include -I/home/cold/esp/esp-idf/components/log/include -I/home/cold/esp/esp-idf/components/soc/include -I/home/cold/esp/esp-idf/components/soc/esp32/. -I/home/cold/esp/esp-idf/components/soc/esp32/include -I/home/cold/esp/esp-idf/components/hal/esp32/include -I/home/cold/esp/esp-idf/components/hal/include -I/home/cold/esp/esp-idf/components/hal/platform_port/include -I/home/cold/esp/esp-idf/components/esp_rom/include -I/home/cold/esp/esp-idf/components/esp_rom/include/esp32 -I/home/cold/esp/esp-idf/components/esp_rom/esp32 -I/home/cold/esp/esp-idf/components/esp_common/include -I/home/cold/esp/esp-idf/components/esp_system/include -I/home/cold/esp/esp-idf/components/esp_system/port/soc -I/home/cold/esp/esp-idf/components/esp_system/port/include/private -I/home/cold/esp/esp-idf/components/xtensa/include -I/home/cold/esp/esp-idf/components/xtensa/esp32/include -I/home/cold/esp/esp-idf/components/lwip/include -I/home/cold/esp/esp-idf/components/lwip/include/apps -I/home/cold/esp/esp-idf/components/lwip/include/apps/sntp -I/home/cold/esp/esp-idf/components/lwip/lwip/src/include -I/home/cold/esp/esp-idf/components/lwip/port/esp32/include -I/home/cold/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/cold/esp/esp-idf/components/driver/include -I/home/cold/esp/esp-idf/components/driver/deprecated -I/home/cold/esp/esp-idf/components/driver/esp32/include -I/home/cold/esp/esp-idf/components/esp_pm/include -I/home/cold/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/cold/esp/learning_components=. -fmacro-prefix-map=/home/cold/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/blink/CMakeFiles/__idf_blink.dir/blink.c.obj -MF esp-idf/blink/CMakeFiles/__idf_blink.dir/blink.c.obj.d -o esp-idf/blink/CMakeFiles/__idf_blink.dir/blink.c.obj -c /home/cold/esp/learning_components/components/blink/blink.c
/home/cold/esp/learning_components/components/blink/blink.c:15:13: error: conflicting types for 'blink'; have 'void(void *)'
   15 | static void blink(void *arg)
      |             ^~~~~
In file included from /home/cold/esp/learning_components/components/blink/blink.c:1:
/home/cold/esp/learning_components/components/blink/include/blink.h:17:6: note: previous declaration of 'blink' with type 'void(blink_config_t *)'
   17 | void blink(blink_config_t *config);
      |      ^~~~~
/home/cold/esp/learning_components/components/blink/blink.c:36:13: error: conflicting types for 'blink_task'; have 'void(void *)'
   36 | static void blink_task(void *arg)
      |             ^~~~~~~~~~
In file included from /home/cold/esp/learning_components/components/blink/blink.c:1:
/home/cold/esp/learning_components/components/blink/include/blink.h:19:6: note: previous declaration of 'blink_task' with type 'void(blink_config_t *)'
   19 | void blink_task(blink_config_t *config);
      |      ^~~~~~~~~~
/home/cold/esp/learning_components/components/blink/blink.c:42:13: error: conflicting types for 'blink_infinite'; have 'void(void *)'
   42 | static void blink_infinite(void *arg)
      |             ^~~~~~~~~~~~~~
In file included from /home/cold/esp/learning_components/components/blink/blink.c:1:
/home/cold/esp/learning_components/components/blink/include/blink.h:21:6: note: previous declaration of 'blink_infinite' with type 'void(blink_config_t *)'
   21 | void blink_infinite(blink_config_t *config);
      |      ^~~~~~~~~~~~~~
/home/cold/esp/learning_components/components/blink/blink.c:42:13: warning: 'blink_infinite' defined but not used [-Wunused-function]
   42 | static void blink_infinite(void *arg)
      |             ^~~~~~~~~~~~~~
/home/cold/esp/learning_components/components/blink/blink.c:36:13: warning: 'blink_task' defined but not used [-Wunused-function]
   36 | static void blink_task(void *arg)
      |             ^~~~~~~~~~
[2/12] Performing build step for 'bootloader'
[1/1] cd /home/cold/esp/learning_components/build/bootloader/esp-idf/esptool_py && /home/cold/.espressif/python_env/idf5.0_py3.11_env/bin/python /home/cold/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/cold/esp/learning_components/build/bootloader/bootloader.bin
Bootloader binary size 0x6700 bytes. 0x900 bytes (8%) free.
[3/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/learning_components.c.obj
/home/cold/esp/learning_components/main/learning_components.c: In function 'app_main':
/home/cold/esp/learning_components/main/learning_components.c:21:29: warning: passing argument 1 of 'xTaskCreatePinnedToCore' from incompatible pointer type [-Wincompatible-pointer-types]
   21 |     xTaskCreatePinnedToCore(&blink_infinite, "blink_task_e", 2048, &led_e_config, 2, NULL, 1);
      |                             ^~~~~~~~~~~~~~~
      |                             |
      |                             void (*)(blink_config_t *)
In file included from /home/cold/esp/learning_components/main/learning_components.c:4:
/home/cold/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/task.h:345:56: note: expected 'TaskFunction_t' {aka 'void (*)(void *)'} but argument is of type 'void (*)(blink_config_t *)'
  345 |     BaseType_t xTaskCreatePinnedToCore( TaskFunction_t pvTaskCode,
      |                                         ~~~~~~~~~~~~~~~^~~~~~~~~~
/home/cold/esp/learning_components/main/learning_components.c:29:29: warning: passing argument 1 of 'xTaskCreatePinnedToCore' from incompatible pointer type [-Wincompatible-pointer-types]
   29 |     xTaskCreatePinnedToCore(&blink_task, "blink_task_i", 2048, &led_i_config, 2, NULL, 0);
      |                             ^~~~~~~~~~~
      |                             |
      |                             void (*)(blink_config_t *)
In file included from /home/cold/esp/learning_components/main/learning_components.c:4:
/home/cold/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/task.h:345:56: note: expected 'TaskFunction_t' {aka 'void (*)(void *)'} but argument is of type 'void (*)(blink_config_t *)'
  345 |     BaseType_t xTaskCreatePinnedToCore( TaskFunction_t pvTaskCode,
      |                                         ~~~~~~~~~~~~~~~^~~~~~~~~~
At top level:
/home/cold/esp/learning_components/main/learning_components.c:11:20: warning: 'TAG' defined but not used [-Wunused-variable]
   11 | const static char *TAG = "main";
      |                    ^~~
ninja: build stopped: subcommand failed.
